--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <aws.sdk.version>1.11.192</aws.sdk.version>
         <nexus.version>2.14.3-02</nexus.version>
         <artifactory.javaclient.version>2.5.0</artifactory.javaclient.version>
+        <morphia.version>1.3.2</morphia.version>
     </properties>
 
     <repositories>
@@ -150,7 +151,7 @@
             <dependency>
                 <groupId>org.mongodb.morphia</groupId>
                 <artifactId>morphia</artifactId>
-                <version>1.3.1</version>
+                <version>${morphia.version}</version>
                 <exclusions>
                     <exclusion>
                         <artifactId>mongo-java-driver</artifactId>
@@ -162,7 +163,7 @@
             <dependency>
                 <groupId>org.mongodb.morphia</groupId>
                 <artifactId>morphia-logging-slf4j</artifactId>
-                <version>1.3.1</version>
+                <version>${morphia.version}</version>
                 <exclusions>
                     <exclusion>
                         <artifactId>morphia</artifactId>
