Kubernetes advanced backend (#673)
* Yaml defs support

* RC yaml

* All via yaml.

* working

* refactor

* basic convert

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -404,6 +404,11 @@
 
         <dependency>
             <groupId>io.fabric8</groupId>
+            <artifactId>kubernetes-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.fabric8</groupId>
             <artifactId>kubernetes-client</artifactId>
         </dependency>
 
