--- a/pom.xml
+++ b/pom.xml
@@ -622,8 +622,14 @@
 
             <dependency>
                 <groupId>io.fabric8</groupId>
+                <artifactId>kubernetes-api</artifactId>
+                <version>2.3.5</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.fabric8</groupId>
                 <artifactId>kubernetes-client</artifactId>
-                <version>1.4.27</version>
+                <version>2.6.3</version>
             </dependency>
 
             <dependency>
