--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <extensions-version>2.4.3</extensions-version>
         <alpnboot.version>8.1.11.v20170118</alpnboot.version>
         <newrelic.version>3.32.0</newrelic.version>
-        <aws.sdk.version>1.11.192</aws.sdk.version>
+        <aws.sdk.version>1.11.197</aws.sdk.version>
         <nexus.version>2.14.3-02</nexus.version>
         <artifactory.javaclient.version>2.5.0</artifactory.javaclient.version>
         <morphia.version>1.3.2</morphia.version>
@@ -523,6 +523,18 @@
             <dependency>
                 <groupId>com.amazonaws</groupId>
                 <artifactId>aws-java-sdk-codedeploy</artifactId>
+                <version>${aws.sdk.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>com.amazonaws</groupId>
+                <artifactId>aws-java-sdk-lambda</artifactId>
                 <version>${aws.sdk.version}</version>
                 <exclusions>
                     <exclusion>
