Feature: Lambda: WIP

--- a/rest/src/main/resources/configs/catalogs.yml
+++ b/rest/src/main/resources/configs/catalogs.yml
@@ -161,6 +161,8 @@ DEPLOYMENT_TYPE:
       value: ECS
     - name: Kubernetes
       value: KUBERNETES
+    - name: AWS Lambda
+      value: AWS_LAMBDA
 
 ENVIRONMENT_TYPE:
     - name: Production
