--- a/rest/src/main/resources/configs/catalogs.yml
+++ b/rest/src/main/resources/configs/catalogs.yml
@@ -21,6 +21,10 @@ ARTIFACT_TYPE:
       value: RPM
     - name: Other
       value: OTHER
+    - name: AWS Lambda
+      value: AWS_LAMBDA
+    - name: AWS Code Deploy
+      value: AWS_CODEDEPLOY
 
 ARTIFACT_SOURCE_TYPE:
     - name: Jenkins Server
