Aws inframapping changes to include filters, public/private dns selection, and autoscaling group (#690)
* Misc: Add AWS lambda sdk and upgrade aws sdk base verison

* Feature: Lambda: WIP

* Misc: added missed out files

* fix: added uiSchema for AWSLambda

* Feature: AWS Lambda. WIP

* Feature: Aws Lambda. WIP

* Misc: add API to fetch all roles

* Feature: AWS Lambda. misc refactoring. WIP

* Feature: AWS Lambda. add API for VPC, Subnet and Security. WIP

* Fix: add validation

* Fix: Security group call

* Misc: add vpc, subnet and security group fields in AWS infraMapping

* Misc: refactor subnet and security API to work on multiple VPCs

* Fix: compilation error

* Misc: refactor Security and Subnet API

* Misc: add filter section for AWS InfraMapping

* Misc: add more fields in AWS InfraMapping

* fix: modified the uiSchema of AWSSSHInframapping

* Misc: Added Tags and AutoScaling group list API

* Add new API for AutoScaling groups and Tags

* Fix: name to region conversion for Autoscaling group fetch

* Fix: List Tag API to return Set of tags

* Fix: compilation error

* fix: modified the ui schema of awsssh

* Misc: Add codedeploy and lambda as artifact type

* todos

* Backend updates for aws inframapping.

* further fixes.

* fix compilation error in test.

* Fix tests.

* Fix tests.

* test issue.

* javax annotation for inject

* Fix backend null checks on update infra mapping.

* Fix for multiple values of same tag.

* cleanup

* aws infra mapping migration script

* Filter cleanup.

--- a/rest/src/main/resources/configs/catalogs.yml
+++ b/rest/src/main/resources/configs/catalogs.yml
@@ -21,6 +21,10 @@ ARTIFACT_TYPE:
       value: RPM
     - name: Other
       value: OTHER
+    - name: AWS Lambda
+      value: AWS_LAMBDA
+    - name: AWS Code Deploy
+      value: AWS_CODEDEPLOY
 
 ARTIFACT_SOURCE_TYPE:
     - name: Jenkins Server
@@ -161,6 +165,8 @@ DEPLOYMENT_TYPE:
       value: ECS
     - name: Kubernetes
       value: KUBERNETES
+    - name: AWS Lambda
+      value: AWS_LAMBDA
 
 ENVIRONMENT_TYPE:
     - name: Production
