--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,11 @@
             <version>${nexus.version}</version>
           </dependency>
             <dependency>
+                <groupId>org.apache.maven</groupId>
+                <artifactId>maven-artifact</artifactId>
+                <version>3.3.3</version>
+            </dependency>
+            <dependency>
                 <groupId>org.jfrog.artifactory.client</groupId>
                 <artifactId>artifactory-java-client-services</artifactId>
                 <version>${artifactory.javaclient.version}</version>
