--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -547,6 +547,10 @@
             <artifactId>artifactory-java-client-services</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-artifact</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>commons-validator</groupId>
