--- a/rest/config.yml
+++ b/rest/config.yml
@@ -78,7 +78,7 @@ delegateMetadataUrl: http://wingsdelegates.s3-website-us-east-1.amazonaws.com/de
 
 portal:
   url: https://localhost:8000
-  allowedDomains: harness.io, wings.software
+  allowedDomains: harness.io, wings.software, localhost
   allowedOrigins: https://localhost:8000
   companyName: Harness Inc
   authTokenExpiryInMillis: 86400000
