--- a/rest/src/main/resources/response_messages.properties
+++ b/rest/src/main/resources/response_messages.properties
@@ -58,6 +58,8 @@ APPDYNAMICS_ERROR=Error while fetching from Appdynamics. ${reason}
 ENCRYPTION_NOT_CONFIGURED=Encryption failed. Have you installed the JCE Unlimited Strength jar files?
 UNAVAILABLE_DELEGATES=No Harness delegate available to execute the request.
 AWS_ACCESS_DENIED=${message}
+AWS_CLUSTER_NOT_FOUND=${message}
+AWS_SERVICE_NOT_FOUND=${message}
 SPLUNK_CONFIGURATION_ERROR=Error while saving Splunk configuration. ${reason}
 ELK_CONFIGURATION_ERROR=Error while saving Elastic Search configuration. ${reason}
 LOGZ_CONFIGURATION_ERROR=Error while saving Logz.io configuration. ${reason}
