--- a/rest/src/main/resources/response_messages.properties
+++ b/rest/src/main/resources/response_messages.properties
@@ -66,3 +66,4 @@ LOGZ_CONFIGURATION_ERROR=Error while saving Logz.io configuration. ${reason}
 NEWRELIC_CONFIGURATION_ERROR=Error while saving New Relic configuration. ${reason}
 NEWRELIC_ERROR=${message}
 SUMO_CONFIGURATION_ERROR=Error while saving Sumo Logic configuration. ${reason}
+KMS_OPERATION_ERROR=KMS operation error. ${reason}
