--- a/rest/src/main/resources/response_messages.properties
+++ b/rest/src/main/resources/response_messages.properties
@@ -1,4 +1,4 @@
-DEFAULT_ERROR_CODE:There are some unknown issues encountered by the application. Please contact Harness support team.
+DEFAULT_ERROR_CODE:An error has occurred. Please contact the Harness support team.
 INVALID_APP_NAME:Invalid application name : ${appName}
 INVALID_TOKEN:Valid token must be provided
 ACCESS_DENIED:User not authorized to access requested resource
