--- a/python/splunk_intelligence/requirements.txt
+++ b/python/splunk_intelligence/requirements.txt
@@ -8,5 +8,11 @@ nltk
 scipy
 sklearn
 plotly
+debacl
+cython
+hdbscan
+statsmodels
+hmmlearn
+pymongo; sys_platform == 'darwin'
 ipython==5.0; sys_platform == 'darwin'
 jupyter; sys_platform == 'darwin'
