Scripts for watcher.

--- a/rest/config.yml
+++ b/rest/config.yml
@@ -77,6 +77,7 @@ metrics:
     port: 2003
     prefix: server
 
+watcherMetadataUrl: http://wingswatchers.s3-website-us-east-1.amazonaws.com/watcherci.txt
 delegateMetadataUrl: http://wingsdelegates.s3-website-us-east-1.amazonaws.com/delegateci.txt
 
 portal:
