--- a/rest/src/main/resources/response_messages.properties
+++ b/rest/src/main/resources/response_messages.properties
@@ -68,3 +68,4 @@ NEWRELIC_CONFIGURATION_ERROR=Error while saving New Relic configuration. ${reaso
 NEWRELIC_ERROR=${message}
 SUMO_CONFIGURATION_ERROR=Error while saving Sumo Logic configuration. ${reason}
 KMS_OPERATION_ERROR=KMS operation error. ${reason}
+VAULT_OPERATION_ERROR=VAULT operation error. ${reason}
