Added some missing task types to the catalog.

--- a/rest/src/main/resources/configs/catalogs.yml
+++ b/rest/src/main/resources/configs/catalogs.yml
@@ -303,6 +303,12 @@ TASK_TYPES:
       value: ELK
     - name: Logz
       value: LOGZ
+    - name: New Relic
+      value: NEWRELIC
+    - name: Sumo Logic
+      value: SUMO
+    - name: Key Management Service
+      value: KMS
 
 EXECUTION_STATUS:
     - name: Aborted
